          too and will be dropped in a future release.

        * The parsing of RootImageOptions= and the mount image parameters of
          ExtensionImages= and MountImages= has been changed so that the last
          duplicated definition for a given partition wins and is applied,
          rather than the first, to keep these options coherent with other
          unit settings.

CHANGES WITH 259:

        Announcements of Future Feature Removals and Incompatible Changes:

        * Support for System V service scripts is deprecated and will be
          removed in v260. Please make sure to update your software *now* to
          include a native systemd unit file instead of a legacy System V
          script to retain compatibility with future systemd releases.
          Following components will be removed:

          * systemd-rc-local-generator,
          * systemd-sysv-generator,
          * systemd-sysv-install (hook for systemctl enable/disable/is-enabled).

        * Required minimum versions of following components are planned to be
          raised in v260:

          * Linux kernel >= 5.10 (recommended >= 5.14),
          * glibc >= 2.34,
          * libxcrypt >= 4.4.0 (libcrypt in glibc will be no longer supported),
          * util-linux >= 2.37,
          * elfutils >= 0.177,
          * openssl >= 3.0.0,
          * cryptsetup >= 2.4.0,
          * libseccomp >= 2.4.0,
          * python >= 3.9.0.

        * The parsing of RootImageOptions= and the mount image parameters of
          ExtensionImages= and MountImages= will be changed in the next version
          so that the last duplicated definition for a given partition wins and
          is applied, rather than the first, to keep these options coherent with
          other unit settings.

        Feature Removals and Incompatible Changes:

        * The cgroup2 file system is now mounted with the
          "memory_hugetlb_accounting" mount option, supported since kernel 6.6.