@@ -336,9 +336,19 @@ TEST(get_color_mode) {
         test_get_color_mode_with_env("SYSTEMD_COLORS", "yes",   COLOR_24BIT);
         test_get_color_mode_with_env("SYSTEMD_COLORS", "24bit", COLOR_24BIT);
 
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-16",    terminal_is_dumb() ? COLOR_OFF : COLOR_16);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-256",   terminal_is_dumb() ? COLOR_OFF : COLOR_256);
+        ASSERT_OK_ERRNO(setenv("COLORTERM", "truecolor", true));
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-24bit", terminal_is_dumb() ? COLOR_OFF : COLOR_24BIT);
+        ASSERT_OK_ERRNO(unsetenv("COLORTERM"));
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-24bit", terminal_is_dumb() ? COLOR_OFF : COLOR_256);
+
         ASSERT_OK_ERRNO(setenv("NO_COLOR", "1", true));
-        test_get_color_mode_with_env("SYSTEMD_COLORS", "42",      COLOR_OFF);
-        test_get_color_mode_with_env("SYSTEMD_COLORS", "invalid", COLOR_OFF);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-16",    COLOR_OFF);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-256",   COLOR_OFF);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "auto-24bit", COLOR_OFF);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "42",         COLOR_OFF);
+        test_get_color_mode_with_env("SYSTEMD_COLORS", "invalid",    COLOR_OFF);
         ASSERT_OK_ERRNO(unsetenv("NO_COLOR"));
         ASSERT_OK_ERRNO(unsetenv("SYSTEMD_COLORS"));
 
